# life

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp  pulsar.txt
sfml/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  nibbles.cpp  nibbles.h  state.cpp  state.h  transform.cpp  transform.h
src/life/: nibbles.cpp  state.cpp  transform.cpp
test/: CMakeLists.txt  nibbles_test.cpp  transform_test.cpp
